--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sketchpad</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Sketchpad</h1>
     <div id="container"></div>
+    <button class="reset">Reset</button>
+    
+    <script src="script.js"></script>
 </body>
 </html>
