Make grid scalable based off the dimensions given in the slider

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <button class="reset">Reset</button>
         </div>
-        <div id="container"></div>
+        <div id="gridContainer"></div>
     </div>
     
     <script src="script.js"></script>
