--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <label for ="fillColor">Choose a color:</label>
                 <input type="color" id="fillColor" name="fillColor" value="black">
             </div>
+            <div class="opacityContainer">
+                <input type="range" min="0" max="1" value="0" step="0.1" oninput="displayOpacity()"class="slider" id="opacitySlider">
+                <p>Opacity: <span class="opacityNum"></span></p>
+            </div>
             <button class="reset">Reset</button>
         </div>
         <div id="gridContainer"></div>
