--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 </head>
 <body>
     <h1>Sketchpad</h1>
-    <div class="wrapper">
+    <div id="wrapper">
         <div id="menu">
-            <div id="gridSettings">
+            <div class="gridSettings">
+                <h2>Grid Settings</h2>
                 <div class="slideContainer">
                     <input type="range" min="16" max="60" value="16" oninput="displayDimensions()" class="slider" id="sliderRange">
                     <p>Size: <span class="width"></span> x <span class="height"></span></p>
                 </div>
                 <button onclick="toggleGridLines()">Toggle grid lines</button>
             </div>
-            <div class="colorWheelContainer">
-                <label for ="fillColor">Choose a color:</label>
-                <input type="color" id="fillColor" name="fillColor" value="black">
-            </div>
-            <div class="opacityContainer">
-                <input type="range" min="0" max="1" value="1" step="0.1" oninput="displayOpacity()"class="slider" id="opacitySlider">
-                <p>Opacity: <span class="opacityNum"></span></p>
+            <div class="fillSettings">
+                <h2>Fill Settings</h2>
+                <div class="colorWheelContainer">
+                    <input type="color" id="fillColor" name="fillColor" value="black">
+                </div>
+                <div class="opacityContainer">
+                    <label for="opacitySlider">Opacity: <span class="opacityNum"></span></label>
+                    <input type="range" min="0" max="1" value="1.0" step="0.1" oninput="displayOpacity()"class="slider" id="opacitySlider">
+                </div>
             </div>
             <button class="reset">Reset</button>
         </div>
